# code-chan

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b4557742746_initial_schema.py  6fca07df826e_add_review_request_cache.py  94eacd111d09_add_thread_position_resolved_and_re_.py  9970c026bb25_add_pr_state_and_review_decision.py  a904c1266c2c_add_label_to_draft_comments.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/ai/: __init__.py  base.py  claude.py  codex.py
backend/app/github/: client.py  clone_manager.py  diff_parser.py
backend/app/reviews/: chunker.py  re_review_service.py  service.py
backend/app/routers/: chunks.py  github.py  re_reviews.py  reviews.py  threads.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_chunks.py  test_github.py  test_helpers.py  test_providers.py  test_re_reviews.py  test_reviews.py  test_threads.py
docs/: architecture.md  contributing.md  setup.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  ChunkList.jsx  DiffView.jsx  DraftComments.jsx  StatusBadge.jsx  ThreadsPanel.jsx
frontend/src/lib/: api.js  labels.js
frontend/src/pages/: Landing.jsx  ReviewInstance.jsx
knowledge-base/: README.md  implementation-log.md  tech-decisions.md
